--- a/DeployTemplates/AzureLinuxWebAppArm.json
+++ b/DeployTemplates/AzureLinuxWebAppArm.json
@@ -1,93 +1,113 @@
 {
     "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
-    "contentVersion": "1.0.0.0",
+    "contentVersion": "1.0.0.1",
     "parameters": {
-      "webAppName": {
-        "type": "string",
-        "defaultValue": "[concat('webApp-', uniqueString(resourceGroup().id))]",
-        "minLength": 2,
-        "metadata": {
-          "description": "CsvToJson API App"
+        "siteName": {
+            "type": "string",
+            "defaultValue": "[concat('WebApp-', uniqueString(resourceGroup().id))]",
+            "metadata": {
+                "description": "The name of the WebApp/ApiApp being deployed"
+            }
+        },
+        "location": {
+            "type": "string",
+            "defaultValue": "[resourceGroup().location]",
+            "metadata": {
+                "description": "Location for all resources."
+            }
+        },
+        "sku": {
+            "type": "string",
+            "allowedValues": [
+                "F1",
+                "D1",
+                "B1",
+                "B2",
+                "B3",
+                "S1",
+                "S2",
+                "S3",
+                "P1",
+                "P2",
+                "P3",
+                "P4"
+            ],
+            "defaultValue": "F1",
+            "metadata": {
+                "description": "The pricing tier for the hosting plan."
+            }
+        },
+        "workerSize": {
+            "type": "string",
+            "allowedValues": [
+                "0",
+                "1",
+                "2"
+            ],
+            "defaultValue": "0",
+            "metadata": {
+                "description": "The instance size of the hosting plan (small, medium, or large)."
+            }
+        },
+        "repoURL": {
+            "type": "string",
+            "defaultValue": "https://github.com/joelbyford/CSVtoJSONcore.git",
+            "metadata": {
+                "description": "The URL for the GitHub repository *CHANGE IF YOU HAVE FORKED THIS REPO*."
+            }
+        },
+        "branch": {
+            "type": "string",
+            "defaultValue": "main",
+            "metadata": {
+                "description": "The branch of the GitHub repository to use."
+            }
         }
-      },
-      "location": {
-        "type": "string",
-        "defaultValue": "[resourceGroup().location]",
-        "metadata": {
-          "description": "Location for all resources."
-        }
-      },
-      "sku": {
-        "type": "string",
-        "defaultValue": "F1",
-        "metadata": {
-          "description": "The SKU of App Service Plan."
-        }
-      },
-      "linuxFxVersion": {
-        "type": "string",
-        "defaultValue": "DOTNETCORE|5.0",
-        "metadata": {
-          "description": "The Runtime stack of current web app"
-        }
-      },
-      "repoUrl": {
-        "type": "string",
-        "defaultValue": "https://github.com/joelbyford/CSVtoJSONcore.git",
-        "metadata": {
-          "description": "Git Repo URL. CHANGE THIS IF YOU HAVE FORKED THE REPO."
-        }
-      }
     },
     "variables": {
-      "appServicePlanPortalName": "[concat('AppServicePlan-', parameters('webAppName'))]"
+        "hostingPlanName": "[concat('hpn-', resourceGroup().name)]"
     },
     "resources": [
-      {
-        "type": "Microsoft.Web/serverfarms",
-        "apiVersion": "2020-06-01",
-        "name": "[variables('appServicePlanPortalName')]",
-        "location": "[parameters('location')]",
-        "sku": {
-          "name": "[parameters('sku')]"
-        },
-        "kind": "linux",
-        "properties": {
-          "reserved": true
-        }
-      },
-      {
-        "type": "Microsoft.Web/sites",
-        "apiVersion": "2020-06-01",
-        "name": "[parameters('webAppName')]",
-        "location": "[parameters('location')]",
-  
-        "dependsOn": [
-          "[resourceId('Microsoft.Web/serverfarms', variables('appServicePlanPortalName'))]"
-        ],
-        "properties": {
-          "serverFarmId": "[resourceId('Microsoft.Web/serverfarms', variables('appServicePlanPortalName'))]",
-          "siteConfig": {
-            "linuxFxVersion": "[parameters('linuxFxVersion')]"
-          },
-          "resources": [
-            {
-              "condition": "[contains(parameters('repoUrl'),'http')]",
-              "type": "sourcecontrols",
-              "apiVersion": "2020-06-01",
-              "name": "web",
-              "location": "[parameters('location')]",
-              "dependsOn": [
-                "[resourceId('Microsoft.Web/sites', parameters('webAppName'))]"
-              ],
-              "properties": {
-                "repoUrl": "[parameters('repoUrl')]",
-                "branch": "main",
-                "isManualIntegration": true
-              }
+        {
+            "type": "Microsoft.Web/serverfarms",
+            "apiVersion": "2020-06-01",
+            "name": "[variables('hostingPlanName')]",
+            "location": "[parameters('location')]",
+            "sku": {
+                "name": "[parameters('sku')]",
+                "capacity": "[parameters('workerSize')]"
+            },
+            "properties": {
+                "name": "[variables('hostingPlanName')]"
             }
-          ]
+        },
+        {
+            "type": "Microsoft.Web/sites",
+            "apiVersion": "2020-06-01",
+            "name": "[parameters('siteName')]",
+            "location": "[parameters('location')]",
+            "dependsOn": [
+                "[resourceId('Microsoft.Web/serverfarms', variables('hostingPlanName'))]"
+            ],
+            "properties": {
+                "serverFarmId": "[variables('hostingPlanName')]"
+            },
+            "resources": [
+                {
+                    "type": "sourcecontrols",
+                    "apiVersion": "2020-06-01",
+                    "name": "web",
+                    "location": "[parameters('location')]",
+                    "dependsOn": [
+                        "[resourceId('Microsoft.Web/sites', parameters('siteName'))]"
+                    ],
+                    "properties": {
+                        "repoUrl": "[parameters('repoURL')]",
+                        "branch": "[parameters('branch')]",
+                        "isManualIntegration": true
+                    }
+                }
+            ]
         }
-      }
     ]
-  }
+}
