--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "AppSettings" : {
+    "BasicAuth" : {
+      "Enabled" : false,
+      "Realm" : "example-realm.com",
+      "UsersJson" : "authorizedUsers.json"
+    }
+  },
   "AllowedHosts": "*"
 }
