--- a/.github/workflows/main-push.yml
+++ b/.github/workflows/main-push.yml
@@ -4,6 +4,11 @@ on:
   push:
     branches: [ main ]
 
+# Required block for OIDC token to be used for Azure CLI
+permissions:
+  id-token: write
+  contents: read
+
 # This workflow/action uses the Azure CLI to publish the webapp to a staging slot
 # then tests the app to ensure the app is functioning in that staging slot
 # If successfull, the workflow continues on and does a slot-swap.
@@ -31,17 +36,24 @@ jobs:
     - name: dotnet publish
       run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp --no-build
     
-    - name: Azure WebApp Deploy
-      uses: Azure/webapps-deploy@v2
+    - name: zip package
+      run: |
+        cd ${{env.DOTNET_ROOT}}/myapp
+        zip -r myapp.zip .
+    
+    # Logs into Azure via OIDC (note no password)
+    - name: 'Az OIDC CLI login'
+      uses: azure/login@v1
       with:
-        # Name of the Azure Web App
-        app-name: ${{secrets.APP_NAME}}
-        # Applies to Web Apps(Windows and Linux) and Web App Containers(linux). Multi container scenario not supported. Publish profile (*.publishsettings) file contents with Web Deploy secrets
-        publish-profile: ${{secrets.AZUREWEBAPPPUBLISHPROFILE_STAGE}}
-        # Enter an existing Slot other than the Production slot
-        slot-name: stage
-        # Applies to Web App only: Path to package or folder. *.zip, *.war, *.jar or a folder to deploy
-        package: ${{env.DOTNET_ROOT}}/myapp
+        client-id: ${{ secrets.AZURE_CLIENTID }}
+        tenant-id: ${{ secrets.AZURE_TENANTID }}
+        subscription-id: ${{ secrets.AZURE_SUBSCRIPTIONID }}
+        # Name of the environment. Supported values are azurecloud, azurestack, azureusgovernment, azurechinacloud, azuregermancloud. Default being azurecloud
+        # environment: azurecloud
+
+    # Publishes the app to the staging slot
+    - name: Azure CLI Publish
+      run: az webapp deployment source config-zip -g rgDoNotDeleteDemos -n ${{secrets.APP_NAME}} --slot stage --src ${{env.DOTNET_ROOT}}/myapp/myapp.zip
          
   test:
     name: Smoke Test Staging Slot
@@ -69,11 +81,12 @@ jobs:
     runs-on: ubuntu-latest
     needs: test
     steps:
-      - name: Azure Login
-        uses: Azure/login@v1
+      - name: 'Az OIDC CLI login'
+        uses: azure/login@v1
         with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
-          enable-AzPSSession: false
+          client-id: ${{ secrets.AZURE_CLIENTID }}
+          tenant-id: ${{ secrets.AZURE_TENANTID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTIONID }}
           # Name of the environment. Supported values are azurecloud, azurestack, azureusgovernment, azurechinacloud, azuregermancloud. Default being azurecloud
           # environment: azurecloud
 
