--- a/.github/workflows/dependabot-pr.yml
+++ b/.github/workflows/dependabot-pr.yml
@@ -1,9 +1,8 @@
-name: Test on Pull Request to Main
+name: Test on Dependabot Pull Request
 # only run on Pull Requests that are made to the main branch
 
 on:
-  pull_request:
-    branches: [ main ]
+  pull_request_target
 
 permissions:
   id-token: write
@@ -13,8 +12,8 @@ jobs:
   build:
     name: Build to Test Slot
     runs-on: ubuntu-latest
-    # Skip this workflow if dependabot run.
-    if: ${{ github.actor != 'dependabot[bot]' }}
+    # Ensure that the job runs only when the PR is opened by dependabot
+    if: ${{ github.actor == 'dependabot[bot]' }}
 
     steps:
     - name: Git checkout
@@ -56,8 +55,8 @@ jobs:
     name: Smoke Test
     needs: build
     runs-on: ubuntu-latest
-    # Skip this workflow if dependabot run.
-    if: ${{ github.actor != 'dependabot[bot]' }}
+    # Ensure that the job runs only when the PR is opened by dependabot
+    if: ${{ github.actor == 'dependabot[bot]' }}
 
     steps:
     - name: Git checkout
